Fix Visibility Button

--- a/src/shared/ui/VisibilityButton/VisibilityButton.module.scss
+++ b/src/shared/ui/VisibilityButton/VisibilityButton.module.scss
@@ -3,3 +3,7 @@
   background: none;
   cursor: pointer;
 }
+
+.image {
+  display: block;
+}
